# SEG-PEFT

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml
notebooks/: ablation.ipynb  model-usage.ipynb  model-usage.py  model_usage-2.ipynb
scripts/: extract_metrics.py  train_mask2former.py  train_segformer.py  train_segformer_lora.py  train_segformer_old.py
src/lorapid/: metrics.py
src/lorapid/data/: kvasir_seg.py
src/segpeft/: __init__.py  metrics.py
src/segpeft/models/: mask2former.py
