[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorapid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.4.18",
    "datasets>=3.2.0",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pyml>=0.0.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
