[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segpeft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations",
    "datasets",
    "evaluate",
    "matplotlib",
    "pandas",
    "peft",
    "pyml",
    "scikit-learn",
    "torch",
    "transformers",
]

[tool.setuptools]
package-dir = {"" = "src"}
